Fix alignment issues on mobile

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -15,6 +15,8 @@ html {
 
 /* Set core body defaults */
 body {
+  max-width: 27rem;
+  margin: 0 auto;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   background-image: url("../img/bg-mobile.svg");
