--- a/scss/pages/_huddle-landing-page.scss
+++ b/scss/pages/_huddle-landing-page.scss
@@ -10,7 +10,6 @@
 
   &-logo {
     display: inline-block;
-    margin-left: 5.5rem;
 
     &__img {
       max-width: 12rem;
@@ -19,9 +18,6 @@
 }
 
 .landing-container {
-  max-width: 265px;
-  margin: 1rem auto 0;
-
   @include m.breakpoint-md() {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
